--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.13",
     "gsap": "^3.12.5",
-    "next": "14.2.4",
+    "next": "^14.2.20",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
